<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundmain"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainMenu" >

    <Button
        android:id="@+id/newgame"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:background="#FFFFFF"
        android:onClick="clickOnNewGame"
        android:text="@string/menu_new_game" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:onClick="clickOnSettingsButton"
        android:text="@string/menu_settings" />

    <Button
        android:id="@+id/helpButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:background="#FFFFFF"
        android:onClick="clickOnHelpButton"
        android:text="@string/help" />

</LinearLayout>