<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true"
    android:background="#000000"
    android:gravity="center_vertical"
    android:screenOrientation="landscape"
    tools:context=".MainActivity" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#d6d7d6"
        android:gravity="center"
        android:screenOrientation="landscape"
        tools:context=".MainActivity" >

        <RadioGroup
            android:id="@+id/difficultyChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/difficultyView"
            android:layout_centerInParent="true"
            android:background="#d6d7d6"
            android:checkedButton="@+id/difficulty_beginner"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/difficulty_beginner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_beginner" />

            <RadioButton
                android:id="@+id/difficulty_pro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_pro" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/levelChooser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/levelView"
            android:layout_centerInParent="true"
            android:background="#d6d7d6"
            android:checkedButton="@+id/level_rainbow"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/level_rainbow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_rainbow" />

            <RadioButton
                android:id="@+id/level_classic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level_classic" />
        </RadioGroup>

        <Spinner
            android:id="@+id/songChooser"
            android:layout_width="120pt"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selection"
            android:background="#FFFFFFFF"
            android:gravity="center_horizontal"
            android:spinnerMode="dropdown"
            tools:listitem="@android:layout/simple_list_item_checked" />

        <TextView
            android:id="@+id/difficultyView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/difficultyChooser"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/levelView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/difficultyChooser"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/levelChooser"
            android:textSize="18sp" />

        <Switch
            android:id="@+id/blindTestChoice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/levelChooser"
            android:layout_centerHorizontal="true"
            android:text="Blind Test mode" />

        <TextView
            android:id="@+id/selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/levelView"
            android:layout_below="@+id/blindTestChoice"
            android:gravity="center_horizontal"
            android:text="@string/songChooser"
            android:textSize="18sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="20pt"
        android:layout_below="@+id/relativeLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/play"
        android:gravity="center_horizontal"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</RelativeLayout>